--- a/MauiTarea.csproj
+++ b/MauiTarea.csproj
@@ -47,13 +47,28 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Resources\Images\araujo.jpg" />
+	  <None Remove="Resources\Images\arena.png" />
+	  <None Remove="Resources\Images\compagnucci.png" />
+	  <None Remove="Resources\Images\Cronaldo.png" />
+	  <None Remove="Resources\Images\dimarco.png" />
+	  <None Remove="Resources\Images\diMaria.png" />
+	  <None Remove="Resources\Images\lemos.png" />
+	  <None Remove="Resources\Images\Lewandoski.jpg" />
+	  <None Remove="Resources\Images\messi.jpg" />
+	  <None Remove="Resources\Images\neymar.jpg" />
+	  <None Remove="Resources\Images\rossi.png" />
+	  <None Remove="Resources\Images\scamaca.png" />
+	  <None Remove="Resources\Images\senesi.png" />
 	</ItemGroup>
 
 	<ItemGroup>
